Fixing vertical alignment on category page thumbnail

--- a/Resources/public/css/category_show.css
+++ b/Resources/public/css/category_show.css
@@ -1,5 +1,5 @@
 body.category.show h1 > img
 {
-    vertical-align: middle;
+    vertical-align: -0.1em;
     width: 1em;
 }
